gcc/testsuite/rust/rustc/ui/if/if-without-else-result.rs
fn main() {
    let a = if true { true };
// { dg-error ".E0317." "" { target *-*-* } .-1 }
// { dg-error ".E0317." "" { target *-*-* } .-2 }
    println!("{}", a);
}

